--- a/MODUL1 RIDWAN/MODUL1 RIDWAN.html
+++ b/MODUL1 RIDWAN/MODUL1 RIDWAN.html
@@ -9,7 +9,7 @@
   
   <body>
     <section id="Home">
-      <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
           <a class="navbar-brand" href="#"> 
             <img src="logo-ead.png" alt="LOGO EAD" width="100" height="30">
@@ -64,8 +64,8 @@
     <section id="Lokasi">
         <div class="Lokasi">
             <h2 style="text-align: center;"> <br> Lokasi Kantor Kami</h2> <br>
-            <div class="row justify-content-md-center">
-                <div class="mapouter"><div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas" srcc="https://maps.google.com/maps?q=tangerang%20selatan&t=&z=15&ie=UTF8&iwloc=&output=embed" 
+            <div class="justify-content-md-center" align="center">
+                <div class="mapouter"><div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=tangerang%20selatan&t=&z=15&ie=UTF8&iwloc=&output=embed" 
                     frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://fmovies-online.net"></a><br>
                     <style>.mapouter{position:relative;text-align:right;height:500px;width:600px;}</style><a href="https://www.embedgooglemap.net">
                         create google maps for website</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}</style></div></div>
@@ -74,7 +74,7 @@
     </br>
     </section>
 
-        <section id="Jenis" style="background-color:gainsboro">
+        <section id="Jenis" style="background-color:gainsboro" align="center">
             <div class="container text-left">
                 <h2 style="text-align: center;"><br> Jenis Mobil</h2> </br>
                 <div class="row row-cols-2">
@@ -145,7 +145,7 @@
               <div>
                 <h5 align="left">Butuh Supir ga?</h5>
                 <div class="form-check" align="left">
-                    <input class="form-check-input" type="checkbox" name="flexRadioDefault" id="flexRadioDefault1">
+                    <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
                     <label class="form-check-label" for="flexRadioDefault1">
                       Butuh nih mager
                     </label>
